@@ -2,24 +2,30 @@ Fast Auxiliary Space Preconditioning (FASP) Solver Package README
 
 --Core Functions Library
 
-last modified on 09/01/2011 by Chensong Zhang
+last modified on 04/25/2012 by Chensong Zhang
 ==================================================
 
 
 ================================
 0. Introduction
 ================================
-The FASP package is built for developing and testing new efficient (multilevel) 
-solvers and preconditioners for discrete partial differential equations (PDEs) 
-or systems of PDEs. The main components of the package are standard Krylov 
-iterative methods, algebaric multigrid methods, and incomplete factorization 
-methods. Based on these standard components, we build efficient solvers for 
-several complicated applications, for example: Stokes equation, underground 
-water simulation, the (modified) black oil model in reservoir simulation, and 
-so on. 
+The FASP package is designed for developing and testing new efficient solvers 
+and preconditioners for discrete partial differential equations (PDEs) or 
+systems of PDEs. The main components of the package are standard Krylov methods, 
+algebaric multigrid methods, and incomplete factorization methods. Based on 
+these standard techniques, we build efficient solvers, based on the framework 
+of Auxiliary Space Preconditioning, for several complicated applications. 
+Current examples include the fluid dynamics, underground water simulation, 
+the black oil model in reservoir simulation, and so on. 
 
 This software is free software distributed under the Lesser General Public 
-License or LGPL, version 3.0.  
+License or LGPL, version 3.0 or any later versions. This software distributed 
+in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even 
+the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
+See the GNU Lesser General Public License for more details.
+
+You should have received a copy of the GNU Lesser General Public License 
+along with FASP. If not, see <http://www.gnu.org/licenses/>.
 
 
 ================================
