@@ -2,7 +2,5 @@
 ||   NOTICE   ||
 ================
 
-This directory contains several C and Fortran files which are from external 
+This directory contains several open-source C and Fortran files which are from external 
 sources and they are NOT part of the FASP package.
-
- 
