@@ -24,9 +24,12 @@ Structure Changes
 ========================
 	
 [ 0.4.1 ] prepare a new HG web server for release
+[       ] prepare a SVN server at PSU (Xiaozhe)
 [ 0.4.1 ] use LOGIC type (TRUE and FALSE) for "if" statements
 [ 0.4.1 ] use INT and REAL for int and double -- allows more flexible data types later
-[ 05/16 ] some constants are used in several functions -- define them in header (Chensong)
+[ 0.7.0 ] separate external libraries
+[ 05/16 ] define repeated constants in header (Chensong)
+[ 05/30 ] generate shared lib's for external packages (Ludmil)
 [ 05/30 ] auto format for plain text, replace TAB by 4 SPACE (Ludmil)
 [ 06/03 ] add Automake and Autoconf support for installation (Ludmil)
 
@@ -46,15 +49,15 @@ AMG
 [ 0.5.0 ] profile and optimize a few core functions: RS, EM
 [ 06/15 ] profile and optimize a few core functions: SA, UA (Xiaozhe)
 
-[ 06/01 ] strength matrix based on (polynomial) smoothers (Xiaozhe)
-[       ] Maximal Independent Set (Ludmil)
 [ 05/20 ] non-overlapping/overlapping schwarz smoother (Xiaozhe)
 [ 05/20 ] polynomial smoothers -- 1/x and Chevbshev (Xiaozhe)
 [ 06/01 ] Tarjan algorithm and other orderings (Ludmil and Xiaozhe)
+[ 06/01 ] strength matrix based on (polynomial) smoothers (Xiaozhe)
+[       ] Maximal Independent Set (Ludmil)
 
 [ 05/20 ] aggressive coarsening strategies (Xiaozhe)
-[       ] cleanup the compatible coarsening (Xiaozhe)
 [ 06/01 ] aggregation based on MIS (Xiaozhe)
+[       ] cleanup the compatible coarsening (Xiaozhe)
 [       ] Notay's aggregation scheme (Xiaozhe)
 [       ] LAMG's aggregation scheme (Xiaozhe)
 
@@ -81,9 +84,9 @@ Iterative Methods
 [ 06/15 ] test SpBLAS implementations in standard libraries (Chunsheng)
 [       ] right preconditioning (Chensong)
 
-[ 05/16 ] different options for stopping criteria: rel res, abs res, etc (Chensong)
 [ 05/11 ] reduced duplications in iterative methods (Chensong)
 [ 05/11 ] unify different data format: CSR, CSRL, BSR, block CSR, STR, etc (Chensong)
+[ 05/16 ] different options for stopping criteria: rel res, abs res, etc (Chensong)
 [       ] solve several problems simultaneously Ax=b --> AX=B (Chensong)
 
 ========================
@@ -122,7 +125,7 @@ Test Examples
 [       ] make a GUI for test problems (Ludmil)
 
 [ 0.4.1 ] build "tutorial" dir for simple examples (Chensong)
-[ 05/26 ] add a set of examples in "tutorial" and modify user's manual accordingly (Chensong)
+[ 05/26 ] add examples in "tutorial" and modify user's manual accordingly (Chensong)
 [ 05/30 ] make online help pages for several tutorial examples (Chensong)
 
 ========================
@@ -130,10 +133,10 @@ OpenMP Support
 ========================
 
 [ 0.4.1 ] OMP functions should be separated from the sequential ones
-[ 05/15 ] OMP functions and serial functions use same interface -- preprocessing (Chunsheng)
+[ 05/15 ] OMP and serial functions use same interface -- preprocessing (Chunsheng)
 [ 05/15 ] make a uniform OpenMP version (Chunsheng)
-[       ] add black-red smoothing to OMP version (Chunsheng)
 [ 05/30 ] profile and optimize OMP code (Chunsheng)
+[       ] add black-red smoothing to OMP version (Chunsheng)
 
 ========================
 GPU Support
